--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -21,8 +21,12 @@
 <% content_for :head do %>
 <%= javascript_include_tag "users.js" %>
 <%= javascript_include_tag "select_dialog.js" %>
-
 <%= javascript_include_tag "jquery.quicksearch.js"-%>
+<% if @permissions[:usersget] != true %>
+<script language="javascript">
+function members_validation(which){ return true; }
+</script>
+<% end %>
 
  <style>
     .pad1_2em {
@@ -127,7 +131,9 @@
     <p>
       <div class="label"><%=_("Members")%></div>
       <%= f.text_field :members_string, :disabled => false, :onkeyup => "members_validation(this);", :class => "members-string"%>
-      <a href="#" class="button" onClick="select_users_open('<%= group.old_cn%>');return false;"><%= _("Manage Members") %></a>
+      <% if @permissions[:usersget] == true %>
+        <a href="#" class="button" onClick="select_users_open('<%= group.old_cn%>');return false;"><%= _("Manage Members") %></a>
+      <% end %>
     </p>
     <p><%= f.hidden_field :group_type %><label id="users-error" class="error"></label></p>
     <div class="nav-buttons">
