--- a/plugins/users/app/views/groups/new.html.erb
+++ b/plugins/users/app/views/groups/new.html.erb
@@ -20,6 +20,11 @@
 -->
 <%= javascript_include_tag "users.js" %>
 <%= javascript_include_tag "select_dialog.js" %>
+<% if @permissions[:usersget] != true %>
+<script language="javascript">
+function members_validation(which){ return true; }
+</script>
+<% end %>
 
   <style type="text/css">
     label.error {
@@ -97,17 +102,12 @@
     <p>
       <label><%=_("Members")%></label>
       <%= f.text_field :members_string, :disabled => false, :onkeyup => "members_validation(this);" %>
-      <a href="#" class="button" onClick="select_users_open('new');return false;">Manage Memebers</a>
+      <% if @permissions[:usersget] == true %>
+        <a href="#" class="button" onClick="select_users_open('');return false;">Manage Memebers</a>
+      <% end %>
     </p>
     <p><%= f.hidden_field :group_type %><label id="users-error" class="error"></label><p>
   </fieldset>
-
-  <div id="members" style="display:none;" title="Members">
-     <div>
-      <div class="GContainerUser" style="width: 100px;" id="ContainerUser" onclick="moveItem(event,'ContainerGroups');"> </div>
-      <div class="GContainerGroups" style="width: 400px;" id="ContainerGroups" onclick="moveItem(event,'ContainerUser');"> </div>
-     </div>
-  </div>
 
   <div class="nav-buttons">
     <%= form_next_button %>
