--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -687,9 +687,13 @@ tr.even {
 /* Error Messages */
 #flash-messages {
   margin-bottom: 2em;
+  width: 95%;
+  max-width: 960px;
+  min-width: 640px;
 }
 .flash-message {
   margin-top: 20px;
+  padding: 12px;
 }
 
 .flash-message span {
