all: remove grid_12 class from all plugins. Make them resize relative to browser window.

--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -21,7 +21,7 @@
 
 <div class='plugin-icon'><img alt="yast-system-user" src='/icons/yast-system-user.png'/><%=_("Administrator Settings")%></div>
 
-<div class="plugin-content grid_12">
+<div class="plugin-content">
 <% content_for :head do %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "digitalspaghetti.password.js" %>
