--- a/plugins/language/app/views/language/index.rhtml
+++ b/plugins/language/app/views/language/index.rhtml
@@ -1,5 +1,5 @@
 <div class='plugin-icon'><img src='/icons/yast-language.png' alt="<%= _("language plugin") %>"/><%=_("Language")%></div>
-<div class='plugin-content grid_12'>
+<div class='plugin-content'>
 <% form_tag '/language/update' do -%>
   <fieldset id="language_set" class="">
     <p>
