--- a/plugins/mail/app/views/mail/index.html.erb
+++ b/plugins/mail/app/views/mail/index.html.erb
@@ -55,7 +55,7 @@
 
 <div class='plugin-icon'><img alt="yast-mail-server" src='/icons/yast-mail-server.png'/><%=_("Mail Settings")%></div>
 
-<div class='plugin-content grid_12'>
+<div class='plugin-content'>
 
 <% disabled = ! @permissions[:write] %>
 
