--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -165,7 +165,7 @@ function select_status (val) {
 
 <div class='plugin-icon'><img src='/icons/yast-system.png' alt=''/><%= _("System Services") %></div>
 
-<div class="plugin-content grid_12">
+<div class="plugin-content">
 
 <div id="heading" class="pad1_2em">
 
