--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -159,7 +159,7 @@
 <% end %>
 
   <div class='plugin-icon'><img src='/icons/yast-online_update.png'/><%=_("Software Repositories") %></div>
-  <div class='plugin-content grid_12'>
+  <div class='plugin-content'>
     <div class="loading"></div>
     <% disabled = !@permissions[:write] %>
 
