--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -47,7 +47,7 @@
 <%= javascript_include_tag :defaults %>
 
 <div class='plugin-icon'><img alt="monitoring" src='/images/monitoring.png'/><%=_("Status")%></div>
-<div class="plugin-content grid_12">
+<div class="plugin-content">
 
 <div class="accordion">
 <% if @graphs %>
