--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -96,7 +96,7 @@ function members_validation(which){ return true; }
 
 <% end %>
 <div class='plugin-icon'><img alt="yast-groups" src='/icons/yast-groups.png'/><%=_("Groups")%></div>
-<div class="plugin-content grid_12">
+<div class="plugin-content">
 
 <form action="#" id="quicksearch" class="pad1_2em">
   <label><%= _("Filter:") %></label>
