--- a/plugins/users/app/views/groups/new.html.erb
+++ b/plugins/users/app/views/groups/new.html.erb
@@ -86,7 +86,7 @@ function members_validation(which){ return true; }
   <%= _("Add new group") %>
 </div>
 
-<div class="plugin-content grid_12">
+<div class="plugin-content">
 
 <%= render :partial => 'shared/missing_write_permissions' if disabled %>
 
