--- a/plugins/firewall/app/views/firewall/index.rhtml
+++ b/plugins/firewall/app/views/firewall/index.rhtml
@@ -81,7 +81,7 @@
 
 <div class='plugin-icon'><img src='/icons/yast-firewall.png' alt="firewall module"/><%=_("Firewall")%></div>
 
-<div class="plugin-content grid_12">
+<div class="plugin-content">
 
   <%= render :partial => 'shared/missing_write_permissions' if disabled %>
 
