--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -314,7 +314,7 @@
   <% end %>
 <% end %>
 <div class='plugin-icon'><img src='/icons/yast-network.png' alt=''/><%=_("Network")%></div>
-<div class='plugin-content grid_12 mkudlvasr-new-forms'>
+<div class='plugin-content'>
 
 <%= render :partial => 'shared/missing_write_permissions' if write_disabled %>
 
