--- a/plugins/registration/app/views/registration/index.rhtml
+++ b/plugins/registration/app/views/registration/index.rhtml
@@ -60,7 +60,7 @@
 
 <div class='plugin-icon'><img src='/icons/yast-product-registration.png' alt="<%= _("register plugin") %>"/><%=_("Registration")%></div>
 
-<div class='plugin-content grid_12' style="padding-top: 8px">
+<div class='plugin-content' style="padding-top: 8px">
 
   <% form_target_save = '/registration/' + (@nexttarget.kind_of?(String) ? @nexttarget : 'skip') %>
 
