--- a/plugins/roles/app/views/roles/index.rhtml
+++ b/plugins/roles/app/views/roles/index.rhtml
@@ -11,7 +11,7 @@
 
 <div class='plugin-icon'><img src='/icons/yast-permissions.png' alt="Roles module"/><%=_("Roles")%></div>
 
-<div class="plugin-content grid_12">
+<div class="plugin-content">
   <ul>
 	<% (@roles||[]).each  do |role| %>
 		<div>
