--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -155,7 +155,7 @@ function def_group_validation(which){ return true; }
 
 <% end %>
 <div class='plugin-icon'><img alt="yast-users" src='/icons/yast-users.png'/><%=_("Users")%></div>
-<div class="plugin-content grid_12">
+<div class="plugin-content">
 
 <form action="#" id="quicksearch" class="pad1_2em">
   <label><%= _("Filter:") %></label>
