--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -169,7 +169,7 @@ function def_group_validation(which){ return true; }
 <div class='plugin-icon'><img src='/icons/yast-users.png' alt="users module"/>
   <%=_("Users") + header_spacer + _("Add new user")%>
 </div>
-<div class="plugin-content grid_12">
+<div class="plugin-content">
 <% form_for :user, :url => { :action => "create"}, :html => { :id => "form_", :autocomplete => :off, :onsubmit => "form_handler('')",}  do |f| %>
   <%= f.error_messages %>
 
