--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -232,12 +232,14 @@ ul li {
 }
 
 #content, #footer {
-  min-width: 450px;
-  width: auto;
+  min-width: 640px;
+  width: 100%;
   max-width: 960px;
   overflow: hidden;
   margin: 0 auto;
   font-size: 0.8em;
+  padding: 0 10px 0;
+  width: 97%;
 }
 
 #footer {
@@ -631,9 +633,7 @@ fieldset fieldset p {
 .plugin-content {
   float: left;
   clear: both;
-  width: 95%;
-  max-width: 960px;
-  min-width: 640px;
+  width: 100%;
 }
 
 /* ========================= Table ========================== */
@@ -687,9 +687,7 @@ tr.even {
 /* Error Messages */
 #flash-messages {
   margin-bottom: 2em;
-  width: 95%;
-  max-width: 960px;
-  min-width: 640px;
+  width: 100%;
 }
 .flash-message {
   margin-top: 20px;
