--- a/plugins/software/app/views/patch_updates/_patch_progress.html.erb
+++ b/plugins/software/app/views/patch_updates/_patch_progress.html.erb
@@ -33,7 +33,7 @@
   -%>
 
   <div style="float: left;">
-  <%= image_tag("/images/working.gif", :height=>"32", :width=>"32", :border=>"0") %>
+  <%= image_tag("/images/working.gif", :class => "small-working-icon") %>
   </div>
 
   <div style="float: left; padding-left: 1em; padding-top:10px">
