--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -649,6 +649,12 @@ fieldset fieldset p {
   min-height: 100px;
 }
 
+img.small-working-icon {
+  width: 20px;
+  height: 20px;
+  border: 0px none transparent;
+}
+
 /* ========================= Table ========================== */
 
 td.icon, td.checkbox, th.checkbox {
