--- a/plugins/status/app/views/status/_status_progress.html.erb
+++ b/plugins/status/app/views/status/_status_progress.html.erb
@@ -22,7 +22,7 @@
 %>
 <div class="status_status">
   <div style="float: left;">
-  <%= image_tag("/images/working.gif", :height=>"32", :width=>"32", :border=>"0") %>
+  <%= image_tag("/images/working.gif", :class=>"small-working-icon") %>
   </div>
 
   <div style="float: left; padding-left: 1em; padding-top:10px">
