--- a/plugins/status/app/views/status/_status_summary.html.erb
+++ b/plugins/status/app/views/status/_status_summary.html.erb
@@ -44,7 +44,7 @@
   <!-- refresh the status again after a timeout -->
   <% javascript_tag do -%>
     setTimeout(function() {
-      $('#status_status').html('<%= image_tag("/images/working.gif", :height=>"32", :width=>"32", :border=>"0") %> <%= _("Loading system information") %>')
+      $('#status_status').html('<%= image_tag("/images/working.gif", :class => "small-working-icon") %> <%= _("Loading system information") %>')
       <%= remote_function(:update => "status_status",
 	:url => { :controller => :status, :action => :show_summary, :background => true }) %>
       }, <%= refresh_timeout.to_i * 1000 -%>);
