webclient: mark accordion styles in style.css

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -710,6 +710,8 @@ tr.even {
   height: 3px;
 }
 
+/* List accordion styles */
+
 .list-fieldset {
   border-color: #ddd #ccc #bbb;
   border-style: solid;
