do not use next_button in add, it doesn't make sense and also generate unnecessary trafic (bnc#602257)

--- a/plugins/software/app/views/repositories/add.html.erb
+++ b/plugins/software/app/views/repositories/add.html.erb
@@ -164,7 +164,7 @@
     <%= form_back_button :action => :index, :onclick=>"$('#progress').show()"%>
     <% if !disabled -%>
       <%= form_str_spacer %>
-      <%= form_next_button :label => _("Save") %>
+      <%= submit_tag _("Save") %>
     <% end -%>
   </div>
 <% end %>
