--- a/plugins/users/app/views/groups/new.html.erb
+++ b/plugins/users/app/views/groups/new.html.erb
@@ -110,7 +110,7 @@ function members_validation(which){ return true; }
   </fieldset>
 
   <div class="nav-buttons">
-    <%= form_next_button %>
+    <%= submit_tag _("Save") %>
     <%= form_str_spacer %>
 	 <%= form_cancel_button :action => :index %>
   </div>
