--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -268,7 +268,7 @@ function def_group_validation(which){ return true; }
 
   </div>
   <div class="nav-buttons">
-    <%= form_next_button :onclick=>"return new_user_validation(this);" %>
+    <%= submit_tag _("Save"), :onclick=>"return new_user_validation(this);" %>
     <%= form_str_spacer %>
     <%= form_cancel_button :action => :index%>
   </div>
