share disable forms function and use it in time (FIXME use it in network)

--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -107,7 +107,7 @@
     function submitTime() {
 		if($("#timeForm").valid() ) {
 		  $('#progress').show();
-      $("#timeForm *").attr('readonly','readonly'); //disable all elements after submit
+      disable_forms();
 		  return true;
 		}
     };
