--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -36,7 +36,6 @@
       $('#nameservers').example('IP address of machine which translates hostnames in IP addresses');
       $('#searchdomains').example('Domain name where hostname searching starts ');
       $('#default_route').example('Target address for outgoing IP data packages');
-      hide_static_config();
     });
    <% end %>
 
@@ -57,8 +56,11 @@
       function hide_static_config() {
             if ($("#conf_mode").val() == "static"){
               $(".fieldset-group").show();
+              $(".fieldset-group :input").enable();
+              $("#dnsForm").valid();
             } else {
               $(".fieldset-group").hide();
+              $(".fieldset-group :input").disable();
             }
       }
    <% end -%>
@@ -86,21 +88,27 @@
 	<script type="text/javascript">
 		function switchFieldsetGroupTab()
 		{
-			var ipValid = getElementsByClass("error valid", "ip-address", "label");
-			var ipErrors = getElementsByClass("error", "ip-address", "label");
-			var dnsValid = getElementsByClass("error valid", "dns", "label");
-			var dnsErrors = getElementsByClass("error", "dns", "label");
+      if ($("#conf_mode").val() == "static"){
+			  var ipValid = getElementsByClass("error valid", "ip-address", "label");
+  			var ipErrors = getElementsByClass("error", "ip-address", "label");
+	  		var dnsValid = getElementsByClass("error valid", "dns", "label");
+		  	var dnsErrors = getElementsByClass("error", "dns", "label");
 
-			if(dnsValid.length != dnsErrors.length && ipValid.length == ipErrors.length) {
-				focus_field("name");
-			} else if(ipValid.length != ipErrors.length && dnsValid.length == dnsErrors.length) {
-				focus_field("ip");
-			} else if(ipValid.length != ipErrors.length && dnsValid.length != dnsErrors.length) {
-				focus_field("ip");
-			} else if (ipValid.length == ipErrors.length && dnsValid.length == dnsErrors.length) {
-				$('#progress').show();
-				return true;
-			}
+  			if(dnsValid.length != dnsErrors.length && ipValid.length == ipErrors.length) {
+	  			focus_field("name");
+				  return false;
+		  	} else if(ipValid.length != ipErrors.length && dnsValid.length == dnsErrors.length) {
+			  	focus_field("ip");
+				  return false;
+  			} else if(ipValid.length != ipErrors.length && dnsValid.length != dnsErrors.length) {
+	  			focus_field("ip");
+				  return false;
+		  	}
+      }
+
+      disable_forms();
+		 	$('#progress').show();
+		  return true;
 		}
 	</script>
 
@@ -185,6 +193,7 @@
 		$("#domain").keyup( function() {$("#dnsForm").valid();});
 		$("#nameservers").keyup( function() {$("#dnsForm").valid();});
 		$("#searchdomains").keyup( function() {$("#dnsForm").valid();});
+    hide_static_config();
 	 });
 	 </script>
 
